cicd_team_ems209/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: team-ems209
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ems209_frontend:latest
          ports:
            - containerPort: 80  # Correctly specifying the port  
              protocol: TCP
